Fixed mobile menu weird menu-item spacing

--- a/Modules/Panel/resources/assets/css/app.css
+++ b/Modules/Panel/resources/assets/css/app.css
@@ -141,37 +141,14 @@ input[type="checkbox"]:focus {
     opacity: 0;
     transition: opacity 0.1s ease-in-out;
     display: block;
-    pointer-events: none; /* Initially disabled */
+    pointer-events: none;
 }
 
 .dropdown-menu.show {
     opacity: 1;
-    pointer-events: auto; /* Enabled when shown */
+    pointer-events: auto;
 }
 
 .badge {
     width: 100px;
-}
-
-.nav-tabs {
-    border-bottom: none !important;
-}
-
-.nav-tabs .nav-link {
-    background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%) !important;
-    color: white !important;
-    transition: all 0.3s ease-in-out;
-    border-radius: 3px;
-}
-
-.nav-tabs .nav-item {
-    background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%) !important;
-    color: white !important;
-    border-radius: 3px;
-}
-
-.nav-tabs .nav-link.active {
-    background-color: rgba(0, 0, 0, 0.0) !important;
-    color: white !important;
-    border-radius: 3px;
 }
